feat(verenigingsloket): set-up jsonapi queries to fetch data used for submission tables

--- a/app/templates/inbox/verenigingsloket/behandeld.hbs
+++ b/app/templates/inbox/verenigingsloket/behandeld.hbs
@@ -2,6 +2,9 @@
   @content={{this.data.value}}
   @isLoading={{or this.updateFilter.isRunning this.data.isLoading}}
   @noDataMessage='Geen aanvragen gevonden'
+  @sort={{this.sort}}
+  @page={{this.page}}
+  @size={{this.pageSize}}
   as |table|
 >
   <table.menu as |menu|>
@@ -22,32 +25,43 @@
   <table.content as |c|>
     <c.header>
       <AuDataTableThSortable
-        @field='title'
+        @field=':no-case:case.event.title'
         @currentSorting={{this.sort}}
         @label='Titel'
       />
       <AuDataTableThSortable
-        @field='organizer'
+        @field=':no-case:applicant.name'
         @currentSorting={{this.sort}}
         @label='Organisator'
       />
       <AuDataTableThSortable
-        @field='createdOn'
+        @field='date'
         @currentSorting={{this.sort}}
         @label='Aangemaakt op'
       />
+      <AuDataTableThSortable
+        @field=':no-case:editorDocument.title'
+        @currentSorting={{this.sort}}
+        @label='Agendapunt'
+      />
     </c.header>
-    <c.body as |aanvraag|>
+    <c.body as |submission|>
       <td>
         <AuLink @skin='primary'>
-          {{aanvraag.title}}
+          {{submission.case.event.title}}
         </AuLink>
       </td>
       <td>
-        {{aanvraag.organizer}}
+        {{submission.applicant.name}}
       </td>
       <td>
-        {{detailed-date aanvraag.createdOn}}
+        {{detailed-date submission.date}}
+      </td>
+      <td>
+        <AgendaPuntLink
+          @documentContainer={{submission.editorDocument.documentContainer}}
+          @readOnly={{false}}
+        />
       </td>
     </c.body>
   </table.content>
