--- a/app/templates/inbox.hbs
+++ b/app/templates/inbox.hbs
@@ -30,7 +30,14 @@
               <AuNavigationLink @route='inbox.verenigingsloket'>
                 <AuIcon @icon='message' @alignment='left' />
                 <span>Aanvragen verenigingsloket</span>
-                <AuBadge @number={{4}} @size='small' @skin="border" class="au-u-margin-left-tiny"/>
+                {{#if this.newSubmissionCount.value}}
+                  <AuBadge
+                    @number={{this.newSubmissionCount.value}}
+                    @size='small'
+                    @skin='border'
+                    class='au-u-margin-left-tiny'
+                  />
+                {{/if}}
               </AuNavigationLink>
             </li>
             {{#if this.model.length}}
