--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -93,7 +93,7 @@
     @widgets={{this.widgets}}
     @nodeViews={{this.nodeViews}}
     @plugins={{this.plugins}}
-    @shouldEditRdfa={{false}}
+    @shouldEditRdfa={{true}}
     @shouldShowRdfa={{true}}
   >
     <:toolbar>
