fix agendapunt-link component

--- a/app/components/agenda-punt-link.hbs
+++ b/app/components/agenda-punt-link.hbs
@@ -1,13 +1,15 @@
-{{#if (or (eq this.editorStatus 'published') @readOnly)}}
-  <LinkTo
-    @route='agendapoints.show'
-    @model={{@documentContainer.id}}
-    class='au-c-link'
-  >{{limit-content @documentContainer.currentVersion.title 70}}</LinkTo>
-{{else}}
-  <LinkTo
-    @route='agendapoints.edit'
-    @model={{@documentContainer.id}}
-    class='au-c-link'
-  >{{limit-content @documentContainer.currentVersion.title 70}}</LinkTo>
+{{#if this.editorStatus.value}}
+  {{#if (or (eq this.editorStatus.value 'published') @readOnly)}}
+    <LinkTo
+      @route='agendapoints.show'
+      @model={{@documentContainer.id}}
+      class='au-c-link'
+    >{{limit-content @documentContainer.currentVersion.title 70}}</LinkTo>
+  {{else}}
+    <LinkTo
+      @route='agendapoints.edit'
+      @model={{@documentContainer.id}}
+      class='au-c-link'
+    >{{limit-content @documentContainer.currentVersion.title 70}}</LinkTo>
+  {{/if}}
 {{/if}}
